--- a/angular/src/app/applications/create-application/create-application-dialog.component.html
+++ b/angular/src/app/applications/create-application/create-application-dialog.component.html
@@ -236,6 +236,33 @@
                     ></abp-validation-summary> -->
           </div>
         </div>
+        <div class="form-group row required">
+          <label class="col-md-3 col-form-label" for="configuration">
+            {{ "ApplicationConfiguration" | localize }}
+          </label>
+          <div class="col-md-9">
+            <select
+              class="form-control"
+              name="configuration"
+              id="configuration"
+              required
+              [(ngModel)]="configName"
+              (change)="onConfigurationChange()"
+            >
+              <!-- iterate through configurations to show options -->
+              <option
+                *ngFor="let config of configurations"
+                [value]="config.name"
+              >
+                {{ config.name }}
+              </option>
+            </select>
+            <!-- <abp-validation-summary
+                  [control]="nameModel"
+                  [controlEl]="nameEl"
+                ></abp-validation-summary> -->
+          </div>
+        </div>
       </tab>
     </tabset>
   </div>
