--- a/angular/src/app/configurations/create-configuration/create-configuration-dialog.component.html
+++ b/angular/src/app/configurations/create-configuration/create-configuration-dialog.component.html
@@ -101,7 +101,7 @@
         </div>
         <div class="form-group row">
           <label class="col-md-3 col-form-label" for="description">
-            {{ "ApplicationDescription" | localize }}
+            {{ "ConfigurationDescription" | localize }}
           </label>
           <div class="col-md-9">
             <textarea
