--- a/angular/src/app/configurations/create-configuration/create-configuration-dialog.component.html
+++ b/angular/src/app/configurations/create-configuration/create-configuration-dialog.component.html
@@ -45,9 +45,8 @@
               [(ngModel)]="configuration.language"
             >
               <option value="0">Ruby</option>
-              <option value="1">Other</option>
-              <option value="2">Other</option>
-              <option value="3">Other</option>
+              <option value="1">C#</option>
+              <option value="2">Javascript</option>
             </select>
             <!-- <abp-validation-summary
                 [control]="nameModel"
