--- a/angular/src/app/layout/sidebar-logo.component.html
+++ b/angular/src/app/layout/sidebar-logo.component.html
@@ -1,9 +1,9 @@
 <a class="brand-link" [routerLink]="['home']">
   <img
-    src="assets/img/logo.png"
+    src="assets/img/logo2.png"
     alt="Logo"
-    class="brand-image img-circle elevation-3"
-    style="opacity: 0.8;"
+    class="brand-image"
+    style="opacity: 1;"
   />
   <span class="brand-text font-weight-light">HotSpotWeb</span>
 </a>
