--- a/angular/src/app/layout/sidebar-user-panel.component.html
+++ b/angular/src/app/layout/sidebar-user-panel.component.html
@@ -2,7 +2,7 @@
   <div class="image">
     <img
       src="assets/img/user.png"
-      class="img-circle elevation-2"
+      class="img-circle"
       alt="User Image"
     />
   </div>
