--- a/angular/src/app/applications/view-application/view-application.component.html
+++ b/angular/src/app/applications/view-application/view-application.component.html
@@ -74,7 +74,7 @@
                                       </div>
                                     </div>
                                 </div>
-                                <div role="button" class="col-12 col-sm-6 col-md-3" (click)="uploadToGithub()">
+                                <div *ngIf="!isApplicationOnGithub" role="button" class="col-12 col-sm-6 col-md-3" (click)="addToGithub()">
                                     <div class="info-box">
                                       <span class="info-box-icon bg-dark">
                                         <i class="fa-brands fa-github"></i>
@@ -87,6 +87,19 @@
                                       </div>
                                     </div>
                                 </div>
+                                <div *ngIf="isApplicationOnGithub" class="col-12 col-sm-6 col-md-3">
+                                  <div class="info-box">
+                                    <span class="info-box-icon bg-dark">
+                                      <i class="fa-brands fa-github"></i>
+                                    </span>
+                                    <div class="info-box-content">
+                                      <span class="info-box-text">Already on Github!</span>
+                                      <!-- <span class="info-box-number">
+                                        6,350+
+                                      </span> -->
+                                    </div>
+                                  </div>
+                              </div>
                                 <div role="button" class="col-12 col-sm-6 col-md-3" (click)="edit()">
                                     <div class="info-box">
                                       <span class="info-box-icon bg-light">
