--- a/angular/src/app/githubRepositories/create-githubRepository/create-githubRepository-dialog.component.html
+++ b/angular/src/app/githubRepositories/create-githubRepository/create-githubRepository-dialog.component.html
@@ -11,43 +11,44 @@
   <div class="modal-body">
     <tabset>
       <tab [heading]="'Details' | localize" class="pt-3 px-2">
-        <div class="form-group row required">
-          <label class="col-md-3 col-form-label" for="name">
-            {{ "GithubRepositoryName" | localize }}
-          </label>
-          <div class="col-md-9">
-            <input
-              type="text"
-              class="form-control"
-              name="name"
-              id="name"
-              required
-              minlength="2"
-              maxlength="32"
-              [(ngModel)]="githubRepository.repositoryName"
-            />
-            <!-- <abp-validation-summary
-              [control]="nameModel"
-              [controlEl]="nameEl"
-            ></abp-validation-summary> -->
+        <div *ngIf="!githubRepositoryId">
+          <div class="form-group row required">
+            <label class="col-md-3 col-form-label" for="name">
+              {{ "GithubRepositoryName" | localize }}
+            </label>
+            <div class="col-md-9">
+              <input
+                type="text"
+                class="form-control"
+                name="name"
+                id="name"
+                required
+                minlength="2"
+                maxlength="32"
+                [(ngModel)]="githubRepository.repositoryName"
+              />
+              <!-- <abp-validation-summary
+                [control]="nameModel"
+                [controlEl]="nameEl"
+              ></abp-validation-summary> -->
+            </div>
           </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-md-3 col-form-label" for="description">
-            {{ "GithubRepositoryDescription" | localize }}
-          </label>
-          <div class="col-md-9">
-            <textarea
-              type="text"
-              class="form-control"
-              name="description"
-              id="description"
-              [(ngModel)]="githubRepository.description"
-            >
-            </textarea>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="description">
+              {{ "GithubRepositoryDescription" | localize }}
+            </label>
+            <div class="col-md-9">
+              <textarea
+                type="text"
+                class="form-control"
+                name="description"
+                id="description"
+                [(ngModel)]="githubRepository.description"
+              >
+              </textarea>
+            </div>
           </div>
-        </div>
-        <div class="form-group row required">
+          <div class="form-group row required">
             <label class="col-md-3 col-form-label" for="githubProfile">
               {{ "GithubRepositoryGithubProfile" | localize }}
             </label>
@@ -68,11 +69,13 @@
                 </option>
               </select>
               <!-- <abp-validation-summary
-                    [control]="nameModel"
-                    [controlEl]="nameEl"
-                  ></abp-validation-summary> -->
+                      [control]="nameModel"
+                      [controlEl]="nameEl"
+                    ></abp-validation-summary> -->
             </div>
           </div>
+        </div>
+        <div *ngIf="githubRepositoryId"></div>
       </tab>
     </tabset>
   </div>
