--- a/angular/src/app/applications/view-application/view-application.component.html
+++ b/angular/src/app/applications/view-application/view-application.component.html
@@ -1,194 +1,217 @@
 <div>
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12"></div>
+      </div>
+    </div>
+  </section>
+  <section class="content px-2">
+    <div class="container-fluid">
+      <div class="card">
+        <div class="card-body">
+          <h1>{{ application.name }}</h1>
+
+          <div class="card">
+            <div class="card-body">
+              <h3>Description</h3>
+              {{ application.description }}
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-3 col-6">
+              <div class="small-box bg-warning">
+                <div class="inner">
+                  <h3>{{ application.status }}</h3>
+                  <p>Status</p>
+                </div>
+                <div class="icon">
+                  <i class="fas fa-terminal"></i>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-6">
+              <div class="small-box bg-success">
+                <div class="inner">
+                  <h3>{{ application?.configuration?.framework }}</h3>
+                  <p>{{ application?.configuration?.language }}</p>
+                </div>
+                <div class="icon">
+                  <i class="fas fa-gears"></i>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-6">
+              <div class="small-box bg-info">
+                <div class="inner">
+                  <h3>{{ application.type }}</h3>
+                  <p>Type</p>
+                </div>
+                <div class="icon">
+                  <i class="fas fa-diagram-project"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              <h3>Actions</h3>
+              <div class="row">
+                <div
+                  role="button"
+                  class="col-12 col-sm-6 col-md-3"
+                  (click)="downloadApplication()"
+                >
+                  <div class="info-box">
+                    <span class="info-box-icon bg-warning bg-danger-hover">
+                      <i class="fas fa-download"></i>
+                    </span>
+                    <div class="info-box-content">
+                      <span class="info-box-text">Download</span>
+                      <!-- <span class="info-box-number">
+                                          6,350+
+                                        </span> -->
+                    </div>
+                  </div>
+                </div>
+                <div
+                  [ngSwitch]="isApplicationOnGithubStatus"
+                  class="col-12 col-sm-6 col-md-3"
+                >
+                  <div
+                    *ngSwitchCase="0"
+                    role="button"
+                    class="info-box"
+                    (click)="addToGithub()"
+                  >
+                    <span class="info-box-icon bg-dark">
+                      <i class="fa-brands fa-github"></i>
+                    </span>
+                    <div class="info-box-content">
+                      <span class="info-box-text"
+                        >Create Github repository</span
+                      >
+                      <!-- <span class="info-box-number">
+                                        6,350+
+                                      </span> -->
+                    </div>
+                  </div>
+                  <div
+                    *ngSwitchCase="1"
+                    role="button"
+                    class="info-box"
+                    (click)="uploadToGithub()"
+                  >
+                    <span class="info-box-icon bg-dark">
+                      <i class="fa-brands fa-github"></i>
+                    </span>
+                    <div class="info-box-content">
+                      <h6 class="text text-success">Repository created</h6>
+                      <span class="info-box-text">Upload to Github</span>
+                      <!-- <span class="info-box-number">
+                                        6,350+
+                                      </span> -->
+                    </div>
+                  </div>
+                  <div *ngSwitchCase="2" class="info-box">
+                    <span class="info-box-icon bg-dark">
+                      <i class="fa-brands fa-github"></i>
+                    </span>
+                    <div class="info-box-content">
+                      <span class="info-box-text"
+                        >Application is on Github!</span
+                      >
+                      <!-- <span class="info-box-number">
+                                        6,350+
+                                      </span> -->
+                    </div>
+                  </div>
+                </div>
+                <div
+                  role="button"
+                  class="col-12 col-sm-6 col-md-3"
+                  (click)="edit()"
+                >
+                  <div class="info-box">
+                    <span class="info-box-icon bg-light">
+                      <i class="fas fa-edit"></i>
+                    </span>
+                    <div class="info-box-content">
+                      <span class="info-box-text">Edit</span>
+                      <!-- <span class="info-box-number">
+                                          6,350+
+                                        </span> -->
+                    </div>
+                  </div>
+                </div>
+                <div
+                  role="button"
+                  class="col-12 col-sm-6 col-md-3"
+                  (click)="delete()"
+                >
+                  <div class="info-box">
+                    <span class="info-box-icon bg-danger">
+                      <i class="fas fa-trash"></i>
+                    </span>
+                    <div class="info-box-content">
+                      <span class="info-box-text">Delete</span>
+                      <!-- <span class="info-box-number">
+                                          6,350+
+                                        </span> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card-header">
+                <h3 class="card-title">History</h3>
+              </div>
+              <div class="card-body table-responsive p-0">
+                <table class="table table-hover text-nowrap">
+                  <thead class="bg-light">
+                    <tr>
+                      <th>Action</th>
+                      <th class="w-10">Info</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngIf="application?.creationTime">
+                      <td>
+                        <a target="_blank"> Created at </a>
+                      </td>
+                      <td>{{ formatDate(application.creationTime) }}</td>
+                    </tr>
+                    <tr *ngIf="application?.lastModificationTime">
+                      <td>
+                        <a target="_blank"> Last modified at </a>
+                      </td>
+                      <td>
+                        {{ formatDate(application.lastModificationTime) }}
+                      </td>
+                    </tr>
+                    <tr *ngIf="application?.configuration?.creationTime">
+                      <td>
+                        <a target="_blank"> Configuration created at </a>
+                      </td>
+                      <td>
+                        {{
+                          formatDate(application?.configuration?.creationTime)
+                        }}
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </section>
-    <section class="content px-2">
-        <div class="container-fluid">
-            <div class="card">
-                <div class="card-body">
-                    <h1>{{application.name}}</h1>
-
-                    <div class="card">
-                        <div class="card-body">
-                            <h3>Description</h3>
-                            {{application.description}}
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-lg-3 col-6">
-                            <div class="small-box bg-warning">
-                                <div class="inner">
-                                    <h3>{{application.status}}</h3>
-                                    <p>Status</p>
-                                </div>
-                                <div class="icon">
-                                    <i class="fas fa-terminal"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-6">
-                            <div class="small-box bg-success">
-                                <div class="inner">
-                                    <h3>{{application?.configuration?.framework}}</h3>
-                                    <p>{{application?.configuration?.language}}</p>
-                                </div>
-                                <div class="icon">
-                                    <i class="fas fa-gears"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-6">
-                            <div class="small-box bg-info">
-                                <div class="inner">
-                                    <h3>{{application.type}}</h3>
-                                    <p>Type</p>
-                                </div>
-                                <div class="icon">
-                                    <i class="fas fa-diagram-project"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-body">
-                            <h3>Actions</h3>
-                            <div class="row">
-                                <div role="button" class="col-12 col-sm-6 col-md-3" (click)="downloadApplication()">
-                                    <div class="info-box">
-                                      <span class="info-box-icon bg-warning bg-danger-hover">
-                                        <i class="fas fa-download"></i>
-                                      </span>
-                                      <div class="info-box-content">
-                                        <span class="info-box-text">Download</span>
-                                        <!-- <span class="info-box-number">
-                                          6,350+
-                                        </span> -->
-                                      </div>
-                                    </div>
-                                </div>
-                                <div [ngSwitch]="isApplicationOnGithubStatus" class="col-12 col-sm-6 col-md-3">
-                                  <div *ngSwitchCase="0" role="button" class="info-box" (click)="addToGithub()">
-                                    <span class="info-box-icon bg-dark">
-                                      <i class="fa-brands fa-github"></i>
-                                    </span>
-                                    <div class="info-box-content">
-                                      <span class="info-box-text">Create Github repository</span>
-                                      <!-- <span class="info-box-number">
-                                        6,350+
-                                      </span> -->
-                                    </div>
-                                  </div>
-                                  <div *ngSwitchCase="1" role="button" class="info-box" (click)="addToGithub()">
-                                    <span class="info-box-icon bg-dark">
-                                      <i class="fa-brands fa-github"></i>
-                                    </span>
-                                    <div class="info-box-content">
-                                      <h6 class="text text-success">Repository created</h6>
-                                      <span class="info-box-text">Upload to Github</span>
-                                      <!-- <span class="info-box-number">
-                                        6,350+
-                                      </span> -->
-                                    </div>
-                                  </div>
-                                  <div *ngSwitchCase="2" class="info-box">
-                                    <span class="info-box-icon bg-dark">
-                                      <i class="fa-brands fa-github"></i>
-                                    </span>
-                                    <div class="info-box-content">
-                                      <span class="info-box-text">Application is on Github!</span>
-                                      <!-- <span class="info-box-number">
-                                        6,350+
-                                      </span> -->
-                                    </div>
-                                  </div>
-                                </div>
-                                <div role="button" class="col-12 col-sm-6 col-md-3" (click)="edit()">
-                                    <div class="info-box">
-                                      <span class="info-box-icon bg-light">
-                                        <i class="fas fa-edit"></i>
-                                      </span>
-                                      <div class="info-box-content">
-                                        <span class="info-box-text">Edit</span>
-                                        <!-- <span class="info-box-number">
-                                          6,350+
-                                        </span> -->
-                                      </div>
-                                    </div>
-                                </div>
-                                <div role="button" class="col-12 col-sm-6 col-md-3" (click)="delete()">
-                                    <div class="info-box">
-                                      <span class="info-box-icon bg-danger">
-                                        <i class="fas fa-trash"></i>
-                                      </span>
-                                      <div class="info-box-content">
-                                        <span class="info-box-text">Delete</span>
-                                        <!-- <span class="info-box-number">
-                                          6,350+
-                                        </span> -->
-                                      </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="card">
-                          <div class="card-header">
-                            <h3 class="card-title">History</h3>
-                          </div>
-                          <div class="card-body table-responsive p-0">
-                            <table class="table table-hover text-nowrap">
-                              <thead class="bg-light">
-                                <tr>
-                                  <th>Action</th>
-                                  <th class="w-10">Info</th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr *ngIf="application?.creationTime">
-                                  <td>
-                                    <a
-                                      target="_blank">
-                                      Created at
-                                    </a>
-                                  </td>
-                                  <td>{{formatDate(application.creationTime)}}</td>
-                                </tr>
-                                <tr *ngIf="application?.lastModificationTime">
-                                    <td>
-                                        <a
-                                        target="_blank">
-                                        Last modified at
-                                        </a>
-                                    </td>
-                                    <td>{{formatDate(application.lastModificationTime)}}</td>
-                                </tr>
-                                <tr *ngIf="application?.configuration?.creationTime">
-                                    <td>
-                                        <a
-                                        target="_blank">
-                                        Configuration created at
-                                        </a>
-                                    </td>
-                                    <td>{{formatDate(application?.configuration?.creationTime)}}</td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-            </div>
-        </div>
-    </section>
-  </div>
-  
+    </div>
+  </section>
+</div>
