changed some things

--- a/angular/src/app/githubRepositories/create-githubRepository/create-githubRepository-dialog.component.html
+++ b/angular/src/app/githubRepositories/create-githubRepository/create-githubRepository-dialog.component.html
@@ -75,7 +75,10 @@
             </div>
           </div>
         </div>
-        <div *ngIf="githubRepositoryId"></div>
+        <div role="button" *ngIf="githubRepositoryId" click="">
+          <i class="fa-brands fa-github fa-5x"></i>
+          <h1>Upload to Github</h1>
+        </div>
       </tab>
     </tabset>
   </div>
