--- a/angular/src/app/applications/view-application/view-application.component.html
+++ b/angular/src/app/applications/view-application/view-application.component.html
@@ -60,6 +60,7 @@
               <h3>Actions</h3>
               <div class="row">
                 <div
+                  *ngIf="!application?.url"
                   role="button"
                   class="col-12 col-sm-6 col-md-3"
                   (click)="downloadApplication()"
@@ -76,6 +77,24 @@
                     </div>
                   </div>
                 </div>
+                <a
+                  *ngIf="application?.url"
+                  role="button"
+                  class="col-12 col-sm-6 col-md-3"
+                  [href]="application?.url"
+                >
+                  <div class="info-box">
+                    <span class="info-box-icon bg-warning bg-danger-hover">
+                      <i class="fas fa-download"></i>
+                    </span>
+                    <div class="info-box-content">
+                      <span class="info-box-text">Download</span>
+                      <!-- <span class="info-box-number">
+                                          6,350+
+                                        </span> -->
+                    </div>
+                  </div>
+                </a>
                 <div
                   [ngSwitch]="isApplicationOnGithubStatus"
                   class="col-12 col-sm-6 col-md-3"
@@ -120,9 +139,7 @@
                       <i class="fa-brands fa-github"></i>
                     </span>
                     <div class="info-box-content">
-                      <span class="info-box-text"
-                        >Application is on Github!</span
-                      >
+                      <span class="info-box-text">Already on Github!</span>
                       <!-- <span class="info-box-number">
                                         6,350+
                                       </span> -->
