--- a/angular/src/app/applications/view-application/view-application.component.html
+++ b/angular/src/app/applications/view-application/view-application.component.html
@@ -60,7 +60,7 @@
               <h3>Actions</h3>
               <div class="row">
                 <div
-                  *ngIf="!application?.url"
+                  *ngIf="!downloadApplicationUrl"
                   role="button"
                   class="col-12 col-sm-6 col-md-3"
                   (click)="downloadApplication()"
@@ -70,7 +70,7 @@
                       <i class="fas fa-download"></i>
                     </span>
                     <div class="info-box-content">
-                      <span class="info-box-text">Download</span>
+                      <span class="info-box-text">Generate</span>
                       <!-- <span class="info-box-number">
                                           6,350+
                                         </span> -->
@@ -78,10 +78,10 @@
                   </div>
                 </div>
                 <a
-                  *ngIf="application?.url"
+                  *ngIf="downloadApplicationUrl"
                   role="button"
                   class="col-12 col-sm-6 col-md-3"
-                  [href]="application?.url"
+                  [href]="downloadApplicationUrl"
                 >
                   <div class="info-box">
                     <span class="info-box-icon bg-warning bg-danger-hover">
