--- a/angular/src/app/applications/view-application/view-application.component.html
+++ b/angular/src/app/applications/view-application/view-application.component.html
@@ -60,7 +60,7 @@
               <h3>Actions</h3>
               <div class="row">
                 <div
-                  *ngIf="!downloadApplicationUrl"
+                  *ngIf="!downloadApplicationUrl && !application?.localPath"
                   role="button"
                   class="col-12 col-sm-6 col-md-3"
                   (click)="downloadApplication()"
