added latest changes

--- a/angular/src/account/layout/account-header.component.html
+++ b/angular/src/account/layout/account-header.component.html
@@ -1,3 +1,9 @@
 <div class="login-logo">
-  <a href="/"><b>HotSpotWeb</b></a>
+  <img
+    src="assets/img/logo2.png"
+    alt="Logo"
+    class="logo"
+    style="width: 186px; height: 100px"
+  />
+  <!-- <a href="/"><b>HotSpotWeb</b></a> -->
 </div>
